# Simple-Bot

./: .dockerignore  README.md  README_DOCKER.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  app.py
frontend/: Dockerfile  ui.py
src/: schema.py  state.py  tool.py  workflow.py
